fix: removed animation on mobile for performance

--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -2,18 +2,31 @@
     @apply block h-1 bg-accent_purple self-stretch
 }
 
-.section:hover .skill-header {
-text-shadow: 1px 1px 0px #0000006e, 3px 3px 0px #91C8E4 , 7px 7px 0px #69B2D7, 11px 11px 0px #449ECB, 15px 15px 0px #238ABE;
-scale: 2;
-transition: text-shadow 0.35s ease scale 0.4s ease;
+.skill-header {
+    text-shadow: 1px 1px 0px #0000006e, 3px 3px 0px #91C8E4, 7px 7px 0px #69B2D7, 11px 11px 0px #449ECB, 15px 15px 0px #238ABE;
+    scale: 1.5;
 }
+
+@media (min-width: 1024px) {
+
+    .skill-header {
+        text-shadow: none;
+        scale: 1;
+    }
+
+    .section:hover .skill-header {
+    text-shadow: 1px 1px 0px #0000006e, 3px 3px 0px #91C8E4, 7px 7px 0px #69B2D7, 11px 11px 0px #449ECB, 15px 15px 0px #238ABE;
+    scale: 1.5;
+}
+}
+
 
 .skill-card {
     @apply p-2 px-4 lg:p-6 rounded-2xl bg-light shadow-md shadow-smooth_dark flex flex-col gap-4 border border-gray-100 transition-all
 }
 
 .skill-card:hover {
-    @apply bg-light scale-105 shadow-stacked transition-all
+    @apply bg-light lg:scale-105 lg:shadow-stacked lg:transition-all
 }
 
 .skill-card-header-title {
@@ -37,7 +50,7 @@ transition: text-shadow 0.35s ease scale 0.4s ease;
 }
 
 .skill-card-header-label {
-    @apply text-accent_purple text-2xl font-semibold
+    @apply text-accent_purple text-2xl font-semibold text-start
 }
 
 
